--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+
 <h1> Hello World </h1>
+
+<h2> About Us </h2>
+
+
 
